# Mercado

./: .gitignore  README.MD
Opciones/: package-lock.json  package.json  tailwind.config.js
Opciones/src/: App.jsx  index.css
Opciones/src/api/: mcpClient.js
Opciones/src/components/charts/: DistributionChart.jsx  GreeksChart.jsx  PayoffChart.jsx  PriceHistoryChart.jsx
Opciones/src/components/layout/: MainLayout.jsx  TabNavigation.jsx  Toolbar.jsx
Opciones/src/components/modals/: HistoricalChartModal.jsx  StrikeDetailModal.jsx
Opciones/src/components/tables/: OptionChainTable.jsx  columns.jsx
Opciones/src/components/tabs/: BuilderTab.jsx  DistributionTab.jsx  OptionChainTab.jsx  PayoffTab.jsx
Opciones/src/i18n/: es.js
Opciones/src/stores/: terminalStore.js
Opciones/src/styles/: bloomberg-theme.css
Opciones/src/utils/: calculations.js  formatting.js
Server/: .env  README.md  api_server.py  main.py  mcp_client.py  openapi_chatgpt.json  pyproject.toml
Server/core/: __init__.py
Server/core/tools/: __init__.py  compute_payoff.py  get_expiration.py  get_historical_prices.py  get_implied_distribution.py  get_option_chain.py  greeks.py  prueba.py
Server/model/: __init__.py  options.py
Server/tests/tools/: compute_payoff_test.py  get_expirations.py  get_greeks_chain.py  get_implied_distribution.py  get_option_chain.py  test_risk_free.py
Server/tests/utils/: get_spot_test.py
Server/utils/: bs.py  get_spot.py  option_quote.py  risk_free.py
